--- a/latex_docu/07/doc.tex
+++ b/latex_docu/07/doc.tex
@@ -149,7 +149,7 @@ nodes, with two replicas per index.
 
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=1.00\textwidth]{images/07_database_architecture_elastic.png}
+	\includegraphics[width=0.7\textwidth]{images/07_database_architecture_elastic.png}
 	\caption{OpenData Database Architecture}
 	\label{fig:elastic-architecture}
 \end{figure}
@@ -267,7 +267,7 @@ different replica. This can be flexible in- or decreased later on.
 
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=1.00\textwidth]{images/07_database_architecture.png}
+	\includegraphics[width=0.8\textwidth]{images/07_database_architecture.png}
 	\caption{OpenData Database Architecture}
 	\label{fig:db-architecture}
 \end{figure}
@@ -282,8 +282,8 @@ example to consider:
 \tightlist
 \item
   we import multiple sources, with multiple measurements:
-  source1(air-temperature, water-temperature) 1980-2017,
-  source2(air-temperature) 1983-1990, source3(uv-index) 2009-2017
+  source1(air-temperature, water-temperature) 1980 - 2017,
+  source2(air-temperature) 1983 - 1990, source3(uv-index) 2009 - 2017
 \item
   each source is partitioned by year and source 1 is partitioned by
   month for all data after 2015.
