--- a/latex_docu/documentation.tex
+++ b/latex_docu/documentation.tex
@@ -89,11 +89,18 @@ Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie co
 \tableofcontents %Table of Content
 \clearpage
 
+%% Figure
+\addcontentsline{toc}{section}{Table of Figures}
+\listoffigures
+
+\clearpage
+
 %%%%%%%%%%%%%%%%%%%%%%%
 %% Content %%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%
 
 \input{01/doc.tex}
+\input{}
 \input{02/doc.tex}
 \input{03/doc.tex}
 \input{04/doc.tex}
