Moving Organization section in sequential order

--- a/latex_docu/documentation.tex
+++ b/latex_docu/documentation.tex
@@ -100,7 +100,7 @@ Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie co
 %%%%%%%%%%%%%%%%%%%%%%%
 
 \input{01/doc.tex}
-\input{}
+\input{01a/doc.tex}
 \input{02/doc.tex}
 \input{03/doc.tex}
 \input{04/doc.tex}
