--- a/latex_docu/appendix/doc.tex
+++ b/latex_docu/appendix/doc.tex
@@ -6,7 +6,7 @@
 \midrule
 \endhead
  1 & Weather Data Stuttgart & Humidity, Temperature, & csv & luftdaten.info \tabularnewline
-   & & Pressure & & \\ 
+   & & Pressure & & \\
  2 & Luftdaten Brandenburg & O\textsubscript{3}, NO, NO\textsubscript{2}, PM10, & xls & luftdaten.brandenburg.de \tabularnewline
 	 & & PM2.5, SO\textsubscript{2}, CO & & \tabularnewline
  3 & Umweltbundesamt & PM10, SO\textsubscript{2}, O\textsubscript{3}, NO\textsubscript{2}, CO & csv &  umweltbundesamt.de \tabularnewline
@@ -18,10 +18,9 @@
 \bottomrule
 \end{longtable}
 
-\section{How to Write a Data
-Importer}\label{how-to-write-a-data-importer}
+\section{How to Write a Data Importer}\label{how-to-write-a-data-importer}
 
-\textbf{Authoriship}
+\textbf{Authorship}
 
 \begin{longtable}[]{@{}llll@{}}
 \toprule
