Bringing authorship formatting in-line with rest of document

--- a/latex_docu/02/doc.tex
+++ b/latex_docu/02/doc.tex
@@ -1,18 +1,6 @@
 \section{Survey of Current Landscape}\label{survey-of-current-landscape}
 
-\textbf{Authorship}
-
-\begin{longtable}[]{@{}llll@{}}
-\toprule
-Version & Date & Modified by & Summary of changes\tabularnewline
-\midrule
-\endhead
-0.1 & 2017-06-03 & Andres Ardila & Working draft\tabularnewline
-0.2 & 2017-07-07 & Andres Ardila & Added section on
-Talend\tabularnewline
-\bottomrule
-\end{longtable}
-
+\textbf{Authorship:} Written by Andres
 
 \subsection{OpenSensors.io}\label{opensensors.io}
 
@@ -21,8 +9,8 @@ https://www.opensensors.io
 \subsubsection{Features}\label{features}
 
 \begin{quote}
-Securely manage your private IoT network {[}\ldots{}{]} whether you are
-a startup or an enterprise
+``Securely manage your private IoT network {[}\ldots{}{]} whether you
+are a startup or an enterprise''
 \end{quote}
 
 \begin{itemize}
@@ -71,8 +59,6 @@ includes hardware providers and manufacturing firms.
 \begin{itemize}
 \tightlist
 \item
-  \textbf{Customers}
-\item
   \textbf{Partners} are hardware manufacturers and design firms (OEMs)
   looking to deliver client projects
 \end{itemize}
@@ -116,6 +102,7 @@ messages for 300 million unique devices per month.
 
 https://www.talend.com/resource/sensor-data/
 
+Talend is //TODO
 
 \subsubsection{Features}\label{features-2}
 
