--- a/latex_docu/03/doc.tex
+++ b/latex_docu/03/doc.tex
@@ -1,6 +1,6 @@
 \section{Architecture}\label{sec:architecture}
 
-\textbf{Authoriship: } Written by Oliver Bruski\\
+\textbf{Authorship: } Written by Oliver Bruski\\
 
 \vspace*{4mm}
 
@@ -320,7 +320,7 @@ Summarizing, we exchanged one building block with a better alternative
 and shortened our pipeline in order to increase throughput.
 
 \begin{figure}
-		\subfigure[Initial Architecture]{\includegraphics[width=0.45\textwidth]{images/170713_architecture_1.png}} 
+		\subfigure[Initial Architecture]{\includegraphics[width=0.45\textwidth]{images/170713_architecture_1.png}}
 		\subfigure[Final Architecture]{\includegraphics[width=0.45\textwidth]{images/170713_architecture4.png}}
 	\caption{Evolution of Architecture}
 	\label{fig:evol_architecture}
