--- a/latex_docu/06/doc.tex
+++ b/latex_docu/06/doc.tex
@@ -1,6 +1,6 @@
 \section{Inserting into Elasticsearch}\label{sec:inserting}
 
-\textbf{Authoriship}
+\textbf{Authorship}
 
 \begin{longtable}[]{@{}llll@{}}
 \toprule
