--- a/latex_docu/07/doc.tex
+++ b/latex_docu/07/doc.tex
@@ -1,6 +1,6 @@
 \section{Database}\label{sec:database}
 
-\textbf{Authoriship: } Written by Nico Tasche\\
+\textbf{Authorship: } Written by Nico Tasche\\
 \emph{Minor proofreading \& edited by Andres Ardila} \\
 
 \vspace*{4mm}
