--- a/latex_docu/12/doc.tex
+++ b/latex_docu/12/doc.tex
@@ -1,6 +1,6 @@
 \section{Conclusions}\label{sec:conclusions}
 
-\textbf{Authoriship}
+\textbf{Authorship}
 
 \begin{longtable}{@{}llll@{}}
 \toprule
