Intro: Quotation marks on block quotes

--- a/latex_docu/01/doc.tex
+++ b/latex_docu/01/doc.tex
@@ -1,7 +1,6 @@
 \section{Introduction}\label{sec:introduction}
 
 \textbf{Authorship}
-\vspace*{4mm}
 
 \begin{longtable}{@{}llll@{}}
 \toprule
@@ -20,12 +19,12 @@ Version & Date & Modified by & Summary of changes \\
 
 \subsection{What is Open Data}\label{what-is-open-data}
 
-So what do we mean when we talk about ``open data''?
+So what do we mean when we talk about \emph{open data}?
 
 \begin{quotation}
-Open means anyone can freely access, use, modify, and share for any
+``Open means anyone can freely access, use, modify, and share for any
 purpose (subject, at most, to requirements that preserve provenance and
-openness). http://opendefinition.org/
+openness).'' http://opendefinition.org/
 \end{quotation}
 
 Further, the definition encompasses the following aspects:
