--- a/latex_docu/01a/doc.tex
+++ b/latex_docu/01a/doc.tex
@@ -1,5 +1,4 @@
-\section{Project Management \&
-Organization}\label{project-management-organization}
+\section{Project Management \& Organization}\label{sec:organization}
 
 \textbf{Authorship}
 
@@ -41,7 +40,7 @@ since in the end, the team was formed of peers. In the beginning, two
 teams had been formed; one that was responsible for the importing
 framework and data sources and one for the database and infrastructure.
 Throughout the project period the roles of several members shifted. In
-the end, one member focused on the modelling and administration of data
+the end, one member focused on the modeling and administration of data
 sources, another member focused on the infrastructure provisioning and
 deployment, the team responsible for the importing framework consisted
 of three persons and lastly, one team two person team worked on the
@@ -63,7 +62,7 @@ While developing software consisting of several disparate building
 blocks, it is crucial to deploy and test the components individually and
 collectively. Due to lack of an own infrastructure, the only feasible
 way to conduct testing - in functionality and performance - was to use a
-cloud provider. Owing to no available budget the decision for the 100\$
+cloud provider. Owing to no available budget the decision for the US\$100
 student grant offered by Amazon Webservices (AWS) was made.
 Nevertheless, this added even more effort to receive access to the
 student grant and, furthermore, to also be able to use all of the
@@ -73,7 +72,7 @@ AWS.
 Moreover, the budget constraints forced the team to start and terminate
 the whole infrastructure every time a test was conducted. In other
 words, a significant amount of time was necessary to create the test
-environment each time, which put additional straints to compensation of
+environment each time, which put additional strains to compensation of
 the already strict time limit. Hence, a significant effort was put into
 automating processes in order to provision the infrastructure and
 deployment of components.
@@ -95,28 +94,28 @@ whole team, but still was mainly the responsibility of the Project
 Manager. Specifically, this means that every team member was encouraged
 to ensure an agile process and administrate issues. Furthermore, the
 workflow was adapted to our specific flow of work so that we convened a
-sprint meeting weekly with an additional weeekly interim meeting and
+sprint meeting weekly with an additional weekly interim meeting and
 omitted the daily scrum.
 
 To keep track of every issue and the global progress, we used a Trello.
-Trello follows the kanban model and arranges issues into lists. We
+Trello follows the Kanban model and arranges issues into lists. We
 created four lists to mirror the lifecycle of issues. The first list -
 product backlog - is where requirements,issues and generally tasks are
 created that the product must satisfy. This list was populated
-coutinously as the project progressed. The next list included tasks due
+continously as the project progressed. The next list included tasks due
 until the next sprint meeting. Following the next list contained tasks
 that were currently worked on and finally, all finished tasks were
 archived.
 
 Slack was the chosen medium of communication, because it allows to
-distinguish between independant topics by using channels. Additionally,
+distinguish between independent topics by using channels. Additionally,
 a shared calendar was used to remember deadlines and a shared file
 system to store the protocols of our meetings. More importantly we used
 GitHub to store the code written. We formed an organization and create a
 separate repository for every component.
 
-In order to intergrate the tools we used as well as to automate
+In order to integrate the tools we used as well as to automate
 workflows a service called Zapier was used. We used it to receive
-notifications about changes on Github and Google Drive and the progress
+notifications about changes on GitHub and Google Drive and the progress
 made on Trello. Though, after the trial ended the functionality was
-limited so that only notifications about Github updates were send.
+limited so that only notifications about GitHub updates were send.
